--- a/css/style.scss
+++ b/css/style.scss
@@ -1384,6 +1384,14 @@ input[type="radio"].visually-hidden {
       line-height: 25px;
 }
 
+.form-elements__field-ordinary-select1:hover {
+      border-color: rgba(24, 25, 32, .2);
+}
+
+.form-elements__field-ordinary-select2:hover {
+      border-color: rgba(24, 25, 32, .2);
+}
+
 .form-elements__field-icon-select1 {
       position: relative;
       height: 50px;
@@ -1410,6 +1418,14 @@ input[type="radio"].visually-hidden {
       line-height: 25px;
 }
 
+.form-elements__field-icon-select1:hover {
+      border-color: rgba(24, 25, 32, .2);
+}
+
+.form-elements__field-icon-select2:hover {
+      border-color: rgba(24, 25, 32, .2);
+}
+
 .form-elements__field-blocked-select1 {
       position: relative;
       height: 50px;
@@ -1434,4 +1450,12 @@ input[type="radio"].visually-hidden {
       padding: 9px 50px 9px 15px;
       font-size: 17px;
       line-height: 25px;
+}
+
+.form-elements__field-blocked-select1:hover {
+      border-color: rgba(24, 25, 32, .2);
+}
+
+.form-elements__field-blocked-select2:hover {
+      border-color: rgba(24, 25, 32, .2);
 }
