--- a/css/style.scss
+++ b/css/style.scss
@@ -2765,6 +2765,7 @@ input[type="radio"].visually-hidden {
 
 // обычное уведомление
 .notice-ordinary__modal-map-wrapper {
+      display: none;
       position: fixed;
       bottom: 0;
       right: 0;
@@ -2775,7 +2776,7 @@ input[type="radio"].visually-hidden {
       display: block;
 }
 
-.notice-ordinary__modal-map-open {
+.notice-ordinary__modal-map-close {
       display: none;
 }
 
@@ -2809,7 +2810,7 @@ input[type="radio"].visually-hidden {
 
 }
 
-.notice-ordinary__modal-map-close {
+.notice-ordinary__modal-map-closebutton {
       position: absolute;
       top: 0;
       right: 0;
@@ -2904,6 +2905,7 @@ input[type="radio"].visually-hidden {
 }
 
 .notice-snackbar__modal-map-wrapper {
+      display: none;
       position: fixed;
       z-index: 10;
       bottom: 0;
@@ -2911,13 +2913,6 @@ input[type="radio"].visually-hidden {
       transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg);
 }
 
-.notice-snackbar__modal-map-open {
-      display: block;
-}
-
-.notice-snackbar__modal-map-close {
-      display: none;
-}
 
 .notice-snackbar__modal-map {
       position: relative;
@@ -2945,12 +2940,18 @@ input[type="radio"].visually-hidden {
       font-size: 17px;
       line-height: 25px;
       color: #0f995e;
+      z-index: 20;
 }
 
 
 .notice-snackbar__modal-map-cancel:hover,
 .notice-snackbar__modal-map-cancel:focus {
       color: rgba(15, 153, 94, .75);
+}
+
+.notice-snackbar__modal-map-open {
+      display: block;
+      z-index: 10;
 }
 
 
@@ -2973,6 +2974,7 @@ input[type="radio"].visually-hidden {
 }
 
 .notice-tost__modal-map-wrapper {
+      display: none;
       width: 100%;
       position: fixed;
       z-index: 10;
@@ -2984,11 +2986,9 @@ input[type="radio"].visually-hidden {
 
 .notice-tost__modal-map-open {
       display: block;
+      z-index: 10px;
 }
 
-.notice-tost__modal-map-close {
-      display: none;
-}
 
 .notice-tost__modal-map {
       width: 1309px;
@@ -3014,6 +3014,7 @@ input[type="radio"].visually-hidden {
       font-size: 17px;
       line-height: 25px;
       color: #0f995e;
+      z-index: 20;
 }
 
 
