--- a/css/style.scss
+++ b/css/style.scss
@@ -2698,7 +2698,6 @@ input[type="radio"].visually-hidden {
       width: 683px;
       font-size: 90px;
       line-height: 90px;
-      // letter-spacing: -2px;
       font-weight: 700;
       margin-bottom: 30px;
 }
@@ -2757,11 +2756,59 @@ input[type="radio"].visually-hidden {
       justify-content: space-between;
 }
 
-.modal-map__addition-style-content {
+.modal-map__notice-style-content {
       width: 680px;
       display: flex;
       justify-content: flex-start;
 }
+
+.modal-map__map-style-table {
+      display: flex;
+      flex-direction: column;
+}
+
+.modal-map__map-style-headline {
+      align-self: flex-start;
+      box-sizing: border-box;
+      font-size: 30px;
+      line-height: 45px;
+      font-weight: 400;
+      margin-bottom: 30px;
+}
+
+.modal-map__map-style-name {
+      box-sizing: border-box;
+      width: 326px;
+      font-size: 20px;
+      line-height: 30px;
+      color: rgba(24, 25, 32, .5);
+}
+
+.modal-map__map-style-ordinary {
+      box-sizing: border-box;
+      padding: 0;
+      margin-bottom: 40px;
+      display: flex;
+      justify-content: space-between;
+}
+
+.modal-map__map-style-random {
+      box-sizing: border-box;
+      padding: 0;
+      margin-bottom: 40px;
+      display: flex;
+      justify-content: space-between;
+}
+
+.modal-map__map-style-content {
+      width: 680px;
+      display: flex;
+      justify-content: flex-start;
+}
+
+
+
+
 
 // обычное уведомление
 .notice-ordinary__modal-map-wrapper {
@@ -2940,7 +2987,6 @@ input[type="radio"].visually-hidden {
       font-size: 17px;
       line-height: 25px;
       color: #0f995e;
-      z-index: 20;
 }
 
 
@@ -3014,11 +3060,165 @@ input[type="radio"].visually-hidden {
       font-size: 17px;
       line-height: 25px;
       color: #0f995e;
-      z-index: 20;
 }
 
 
 .notice-tost__modal-map-cancel:hover,
 .notice-tost__modal-map-cancel:focus {
       color: rgba(15, 153, 94, .75);
+}
+
+// random
+.map-ordinary__button {
+      min-height: 50px;
+      padding: 10px 30px;
+      background-color: #2d52da;
+      transition: all .1s ease-in-out;
+      color: #fff;
+      font-size: 17px;
+      line-height: 30px;
+      cursor: pointer;
+
+}
+
+.map-ordinary__button:hover,
+.map-ordinary__button:focus {
+      background-color: #294bc7;
+}
+
+.map-random__button {
+      min-height: 50px;
+      padding: 10px 30px;
+      background-color: #2d52da;
+      transition: all .1s ease-in-out;
+      color: #fff;
+      font-size: 17px;
+      line-height: 30px;
+      cursor: pointer;
+
+}
+
+.map-random__button:hover,
+.map-random__button:focus {
+      background-color: #294bc7;
+}
+
+.map-ordinary__modal-map-wrapper {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-image: linear-gradient(180deg, rgba(24, 25, 32, .75), rgba(24, 25, 32, .75));
+      z-index: 10;
+}
+
+.map-random__modal-map-container {
+      width: 100%;
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+}
+
+.map-ordinary__modal-map-container {
+      width: 100%;
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+}
+
+// обычное
+.map-ordinary__modal-popup {
+      position: relative;
+      width: 400px;
+      box-sizing: border-box;
+      padding: 30px;
+      display: flex;
+      flex-direction: column;
+      background-color: #fff;
+}
+
+.map-ordinary__modal-popup-headline {
+      font-size: 20px;
+      line-height: 30px;
+      margin: 0;
+      margin-bottom: 10px;
+      padding: 0;
+      color: #181920;
+}
+
+.map-ordinary__modal-popup-text {
+      padding: 0;
+      margin: 0;
+      margin-bottom: 40px;
+      color: rgba(24, 25, 32, .5);
+      font-size: 17px;
+      line-height: 25px;
+}
+
+.map-ordinary__modal-popup-button-container {
+      display: flex;
+      justify-content: space-between;
+      padding: 0;
+      margin: 0;
+}
+
+.map-ordinary__modal-popup-button1 {
+      min-width: 155px;
+      padding: 10px 30px;
+      margin: 0;
+      background-color: #2d52da;
+      color: #ffffff;
+      transition: all .1s ease-in-out;
+      color: #fff;
+      line-height: 30px;
+      font-size: 17px;
+}
+
+.map-ordinary__modal-popup-button1:hover,
+.map-ordinary__modal-popup-button1:focus {
+      background-color: #294bc7;
+}
+
+.map-ordinary__modal-popup-button2 {
+      min-width: 155px;
+      padding: 10px 30px;
+      margin: 0;
+      background-color: rgba(24, 25, 32, .05);
+      color: rgba(24, 25, 32, .5);
+      transition: all .1s ease-in-out;
+      line-height: 30px;
+      font-size: 17px;
+}
+
+.map-ordinary__modal-popup-button2:hover,
+.map-ordinary__modal-popup-button2:focus {
+      background-color: rgba(24, 25, 32, .1);
+      color: #2d52da;
+}
+
+.map-ordinary__modal-popup-closebutton {
+      position: absolute;
+      top: 0;
+      right: 0;
+      margin: 10px;
+      width: 30px;
+      height: 30px;
+      background-image: url(../img/close.svg);
+      opacity: .25;
+      transition: all .1s ease-in-out;
+
+}
+
+.map-ordinary__modal-popup-closebutton:hover,
+.map-ordinary__modal-popup-closebutton:focus {
+      opacity: .5;
+}
+
+.map-ordinary__modal-map-open {
+      display: block;
+      z-index: 10px;
 }
