--- a/css/style.css
+++ b/css/style.css
@@ -2981,6 +2981,16 @@ input[type=radio].visually-hidden {
   z-index: 10;
 }
 
+.map-random__modal-map-wrapper {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: linear-gradient(180deg, rgba(24, 25, 32, 0.75), rgba(24, 25, 32, 0.75));
+  z-index: 10;
+}
+
 .map-random__modal-map-container {
   width: 100%;
   height: 100%;
@@ -3034,6 +3044,7 @@ input[type=radio].visually-hidden {
 
 .map-ordinary__modal-popup-button1 {
   min-width: 155px;
+  box-sizing: border-box;
   padding: 10px 30px;
   margin: 0;
   background-color: #2d52da;
@@ -3051,6 +3062,7 @@ input[type=radio].visually-hidden {
 
 .map-ordinary__modal-popup-button2 {
   min-width: 155px;
+  box-sizing: border-box;
   padding: 10px 30px;
   margin: 0;
   background-color: rgba(24, 25, 32, 0.05);
@@ -3084,6 +3096,117 @@ input[type=radio].visually-hidden {
 }
 
 .map-ordinary__modal-map-open {
+  display: block;
+  z-index: 10px;
+}
+
+.map-random__modal-popup {
+  position: relative;
+  width: 600px;
+  box-sizing: border-box;
+  padding: 30px;
+  display: flex;
+  flex-direction: column;
+  background-color: #fff;
+}
+
+.map-random__modal-popup-headline {
+  font-size: 20px;
+  line-height: 30px;
+  margin: 0;
+  margin-bottom: 10px;
+  padding: 0;
+  color: #181920;
+}
+
+.map-random__modal-popup-form {
+  display: flex;
+  flex-direction: column;
+  padding: 0;
+  margin: 0;
+  margin-bottom: 30px;
+}
+
+.map-random__modal-popup-input {
+  position: relative;
+  min-height: 50px;
+  box-sizing: border-box;
+  margin-bottom: 10px;
+  padding: 9px 14px;
+  border: 1px solid rgba(24, 25, 32, 0.1);
+  transition: all 0.1s ease-in-out;
+  cursor: text;
+  border-color: rgba(24, 25, 32, 0.1);
+  outline: none;
+}
+
+.map-random__modal-popup-input:focus {
+  padding-bottom: 8px;
+  border-color: rgba(24, 25, 32, 0.2) rgba(24, 25, 32, 0.2) #2d52da;
+  border-bottom-width: 2px;
+}
+
+.map-random__modal-popup-button-container {
+  display: flex;
+  justify-content: space-between;
+  padding: 0;
+  margin: 0;
+}
+
+.map-random__modal-popup-button1 {
+  min-width: 255px;
+  box-sizing: border-box;
+  padding: 10px 30px;
+  margin: 0;
+  background-color: #2d52da;
+  color: #ffffff;
+  transition: all 0.1s ease-in-out;
+  color: #fff;
+  line-height: 30px;
+  font-size: 17px;
+}
+
+.map-random__modal-popup-button1:hover,
+.map-random__modal-popup-button1:focus {
+  background-color: #294bc7;
+}
+
+.map-random__modal-popup-button2 {
+  min-width: 255px;
+  box-sizing: border-box;
+  padding: 10px 30px;
+  margin: 0;
+  background-color: rgba(24, 25, 32, 0.05);
+  color: rgba(24, 25, 32, 0.5);
+  transition: all 0.1s ease-in-out;
+  line-height: 30px;
+  font-size: 17px;
+}
+
+.map-random__modal-popup-button2:hover,
+.map-random__modal-popup-button2:focus {
+  background-color: rgba(24, 25, 32, 0.1);
+  color: #2d52da;
+}
+
+.map-random__modal-popup-closebutton {
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin: 10px;
+  width: 30px;
+  height: 30px;
+  background-image: url(../img/close.svg);
+  opacity: 0.25;
+  transition: all 0.1s ease-in-out;
+}
+
+.map-random__modal-popup-closebutton:hover,
+.map-random__modal-popup-closebutton:focus {
+  opacity: 0.5;
+}
+
+.map-random__modal-map-open {
   display: block;
   z-index: 10px;
 }
